plugins/devkit/devkit-java-tests/testData/inspections/extensionRegisteredAsServiceOrComponent/ExtensionComponent.java
class <error descr="A class must not be registered as both an extension and a component">ExtensionComponent</error>
  implements MyExtension, com.intellij.openapi.components.BaseComponent { }